--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /laskarit/viikko2/Maksukortti/target
 /laskarit/viikko2/Maksukortti/nbproject
 /laskarit/viikko2/Unicafe/nbproject/
+/Battleships/target/
+/Battleships/nbproject/
